recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
if(steps!=0){
	current(step)
	droite(angle/2)
	avance(length)
	tree(steps-1, shrink*length, angle, shrink)
	current(step)
	recule(length)
	gauche(angle)
	avance(length)
	tree(steps-1, shrink*length, angle, shrink)
	recule(length)
}
}
